--- a/public/download.html
+++ b/public/download.html
@@ -6,6 +6,8 @@
     <title>Download AI Image</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
@@ -56,12 +58,28 @@
             border: 1px solid #ccc;
             font-size: 0.9em;
         }
+        /* [추가] QR 코드 섹션 스타일 */
+        .option-box {
+            border: 1px solid #ccc;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            background-color: #fafafa;
+        }
+        .qr-box {
+            margin: 15px auto;
+            padding: 8px;
+            border: 2px solid #111;
+            display: inline-block;
+            background-color: white;
+        }
     </style>
 </head>
 <body>
 <div class="container result-container">
     <div class="result-card">
         <h2>✨ GENERATION COMPLETE</h2>
+
         <img id="finalImagePreview" alt="AI 결과 이미지" class="preview-img" style="display: none;">
         <p id="errorStatus" style="color: red; display: none;">이미지를 로드할 수 없습니다.</p>
 
@@ -72,6 +90,12 @@
                 <option value="medium">Medium (1024px, Optimized)</option>
                 <option value="small">Small (512px)</option>
             </select>
+        </div>
+
+        <div class="option-box">
+            <h4>01. MOBILE (QR CODE)</h4>
+            <div id="qrcode" class="qr-box"></div>
+            <p class="status-text note">Scan to save to your phone.</p>
         </div>
 
         <a id="downloadLink" class="btn download-link" download="my_ai_art.png" href="#">
@@ -89,8 +113,8 @@
         const resolutionSelect = document.getElementById('resolutionSelect');
         const downloadLink = document.getElementById('downloadLink');
         const errorStatus = document.getElementById('errorStatus');
+        const qrcodeDiv = document.getElementById('qrcode');
 
-        // URL에서 쿼리 파라미터 (file) 추출
         const urlParams = new URLSearchParams(window.location.search);
         const filename = urlParams.get('file');
 
@@ -101,7 +125,8 @@
             finalImagePreview.src = generatedImageUrl;
             finalImagePreview.style.display = 'block';
 
-            // 초기 다운로드 링크 설정
+            // 초기 해상도 설정 (Large)
+            resolutionSelect.value = 'large';
             updateDownloadLinks(filename);
 
             // 해상도 변경 시 다운로드 링크 업데이트 이벤트 리스너 추가
@@ -110,13 +135,25 @@
             errorStatus.style.display = 'block';
         }
 
+        // 해상도에 따라 다운로드 URL 및 QR 코드 업데이트
         function updateDownloadLinks(filename) {
             const selectedSize = resolutionSelect.value;
-            // 다운로드 API URL 구성
             const downloadApiUrl = `/api/download/${filename}?size=${selectedSize}`;
 
+            // 1. PC 다운로드 링크 업데이트
             downloadLink.href = downloadApiUrl;
             downloadLink.setAttribute('download', `ai_result_${selectedSize}.png`);
+
+            // 2. QR 코드 업데이트/재생성 (새로운 다운로드 API URL 사용)
+            qrcodeDiv.innerHTML = '';
+            new QRCode(qrcodeDiv, {
+                text: `${window.location.origin}${downloadApiUrl}`,
+                width: 200,
+                height: 200,
+                colorDark : "#111111",
+                colorLight : "#ffffff",
+                correctLevel : QRCode.CorrectLevel.H
+            });
         }
     });
 </script>
