--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <h1>AI STUDIO <i class="fas fa-paint-brush"></i></h1>
 
     <div class="card step-card">
-        <h2>01. MODE</h2>
+        <h2>MODE</h2>
         <div class="mode-selector">
             <button class="btn mode-btn active" data-mode="image" title="PC 파일 변환"><i class="fas fa-desktop"></i></button>
             <button class="btn mode-btn" data-mode="text" title="텍스트 생성"><i class="fas fa-keyboard"></i></button>
@@ -28,7 +28,7 @@
     </div>
 
     <div class="card step-card">
-        <h2>02. INPUT</h2>
+        <h2>INPUT</h2>
 
         <section id="imageMode" class="mode-content">
             <input type="file" accept="image/*" name="pcImage" id="fileUploader" style="display: none;">
@@ -57,7 +57,7 @@
         </section>
 
         <div id="commonAISettings" class="common-settings">
-            <h4>03. SETTINGS</h4>
+            <h4>SETTINGS</h4>
             <textarea id="stylePromptInput" placeholder="스타일 입력 (예: cinematic, low-poly)" rows="2" class="input-full"></textarea>
             <select id="styleSelect" class="input-full">
                 <option value="default">STYLE (Optional)</option>
