feat: Add client-side safety filter and display AI image analysis feedback on download page

--- a/public/download.html
+++ b/public/download.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
     <style>
+        /* ... (기존 스타일 유지) ... */
         .result-container {
             max-width: 600px;
             width: 100%;
@@ -79,6 +80,11 @@
     <div class="result-card">
         <h2>✨ GENERATION COMPLETE</h2>
 
+        <div id="visionFeedbackSection" class="option-box" style="display: none; text-align: left;">
+            <h4 style="margin-top: 0;">AI Image Analysis Used (GPT-4o)</h4>
+            <p id="visionDescriptionText" style="white-space: pre-wrap; font-size: 0.9em; color: #555; word-break: break-all;"></p>
+        </div>
+
         <img id="finalImagePreview" alt="AI 결과 이미지" class="preview-img" style="display: none;">
         <p id="errorStatus" style="color: red; display: none;">이미지를 로드할 수 없습니다.</p>
 
@@ -122,12 +128,16 @@
         const downloadLink = document.getElementById('downloadLink');
         const errorStatus = document.getElementById('errorStatus');
         const qrcodeDiv = document.getElementById('qrcode');
-        const downloadOptionsDiv = document.getElementById('downloadOptions'); // ⭐️ [추가] 옵션 DIV
+        const downloadOptionsDiv = document.getElementById('downloadOptions');
+        const showDownloadButton = document.getElementById('showDownloadOptionsBtn');
 
-        const showDownloadButton = document.getElementById('showDownloadOptionsBtn'); // ⭐️ [추가] 옵션 표시 버튼
+        const visionFeedbackSection = document.getElementById('visionFeedbackSection'); // ⭐️ [추가] 분석 섹션
+        const visionDescriptionText = document.getElementById('visionDescriptionText'); // ⭐️ [추가] 분석 텍스트
 
         const urlParams = new URLSearchParams(window.location.search);
         const filename = urlParams.get('file');
+        const mode = urlParams.get('mode'); // ⭐️ [추가] 모드 읽기
+        const visionDescription = urlParams.get('desc'); // ⭐️ [추가] 분석 텍스트 읽기
 
         let generatedImageUrl = null;
 
@@ -136,17 +146,21 @@
             finalImagePreview.src = generatedImageUrl;
             finalImagePreview.style.display = 'block';
 
-            // 초기 해상도 설정 (Large)
+            // ⭐️ [Feature 1] 분석 피드백 표시 로직
+            if ((mode === 'image' || mode === 'qr') && visionDescription) {
+                visionFeedbackSection.style.display = 'block';
+                // URL 디코딩하여 텍스트 표시
+                visionDescriptionText.textContent = decodeURIComponent(visionDescription);
+            }
+
             resolutionSelect.value = 'large';
 
-            // ⭐️ [복구] 'DOWNLOAD OPTIONS' 버튼 클릭 시 기능 활성화
             showDownloadButton.addEventListener('click', () => {
-                downloadOptionsDiv.style.display = 'block'; // 옵션 섹션 표시
-                showDownloadButton.style.display = 'none'; // 옵션 버튼 숨김
-                updateDownloadLinks(filename); // 초기 링크 설정 및 QR 코드 생성
+                downloadOptionsDiv.style.display = 'block';
+                showDownloadButton.style.display = 'none';
+                updateDownloadLinks(filename);
             });
 
-            // 해상도 변경 시 다운로드 링크 업데이트 이벤트 리스너 추가
             resolutionSelect.addEventListener('change', () => updateDownloadLinks(filename));
         } else {
             errorStatus.style.display = 'block';
@@ -157,11 +171,9 @@
             const selectedSize = resolutionSelect.value;
             const downloadApiUrl = `/api/download/${filename}?size=${selectedSize}`;
 
-            // 1. PC 다운로드 링크 업데이트
             downloadLink.href = downloadApiUrl;
             downloadLink.setAttribute('download', `ai_result_${selectedSize}.png`);
 
-            // 2. QR 코드 업데이트/재생성 (새로운 다운로드 API URL 사용)
             qrcodeDiv.innerHTML = '';
             new QRCode(qrcodeDiv, {
                 text: `${window.location.origin}${downloadApiUrl}`,
